--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.15",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "uuid": "^10.0.0"
   }
 }
